--- a/src/app/admin/supplements/add/styles.module.css
+++ b/src/app/admin/supplements/add/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 2rem;
+  padding: 2rem 2rem 2rem 0;
   max-width: 1000px;
   margin: 0 auto;
 }
